--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,12 +1,18 @@
 // Colors
 $dark-grey: #333;
+
 $grey: #666;
-$blue: #1c88bf;
-$dark-blue: #364051;
-$off-white: #f7f7f7;
+
+$blue: #78D4F3;
+
+$dark-blue: #2C2F37;
+
+$off-white: #FBFBFC;
+
 // Font Size
 $font-size-large: 1.8rem;
 $font-size-small: 1.4rem;
+
 // Spacing
 $s-size: 1.2rem;
 $m-size: 1.6rem;
