--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-  color: $dark-grey;
+  color: $dark-blue;
   font-family: Helvetica, Arial, sans-serif;
   font-size: $m-size;
   line-height: 1.6;
