--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,26 +1,9 @@
-* {
-  box-sizing: border-box;
-}
+//Colors
+$tramodana-black: #2C2F37;
+$tramodana-skin: #E5A292;
+$tramodana-red: #FB674A;
+$tramodana-blue: #78D4F3;
+$tramodana-lightgrey: #DEDBDF;
+$tramodana-white: #FBFBFC;
+$tramodana-darkgrey: #9E9CA0;
 
-html {
-  font-size: 62.5%;
-}
-
-body {
-  color: $dark-blue;
-  font-family: Helvetica, Arial, sans-serif;
-  font-size: $m-size;
-  line-height: 1.6;
-}
-
-button {
-  cursor: pointer;
-}
-
-button:disabled {
-  cursor: default;
-}
-
-.is-active {
-  font-weight: bold;
-}
